crates/tui/tests/snapshots/snapshot_tests__snapshot_index_details_popup_empty.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Indexes | [?] Unknown                                                                                    │
│ |                 ┌Index Details─────────────────────────────────────────────────────────────────┐                   │
└───────────────────│                               No index selected                              │───────────────────┘
┌Indexes────────────│                                                                              │───────────────────┐
│                   │                            Press Esc or q to close                           │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
│                   │                                                                              │                   │
└───────────────────└──────────────────────────────────────────────────────────────────────────────┘───────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ Tab:Next Screen | Shift+Tab:Previous Screen | r:Refresh Enter:Details j/k or Up/Down:Navigate ...| ?:Help | q:Quit   │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
