crates/tui/tests/snapshots/snapshot_tests__snapshot_internal_logs_screen.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Internal Logs | [?] Unknown                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌Internal Logs (_internal)─────────────────────────────────────────────────────┐
│   Time       Level      Component    Message                                 │
│>> 2024-01-15 INFO       Metrics      some metrics log message                │
│   2024-01-15 ERROR      DateParser   failed to parse date                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health 6:Saved 7:Logs 8:Apps 9:Users 0:│
└──────────────────────────────────────────────────────────────────────────────┘
