crates/tui/tests/snapshots/snapshot_tests__snapshot_job_details_screen_no_job.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                      No job selected or jobs not loaded.                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit                                 │
└──────────────────────────────────────────────────────────────────────────────┘
