crates/tui/tests/snapshots/snapshot_tests__snapshot_job_details_screen_with_job.snap
---
source: crates/tui/tests/snapshot_tests.rs
expression: harness.render()
---
┌──────────────────────────────────────────────────────────────────────────────┐
│Splunk TUI - Job Details                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
┌Job Details───────────────────────────────────────────────────────────────────┐
│                    Job: scheduler_admin_search_1234567890                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│Status: Done                                                                  │
│Duration: 5.23 seconds                                                        │
│Event Count: 500                                                              │
│Scan Count: 1500                                                              │
│Result Count: 100                                                             │
│Disk Usage: 2048 MB                                                           │
│Priority: 5                                                                   │
│Label: Scheduled search                                                       │
│Cursor Time: 2024-01-15T10:30:00.000Z                                         │
│Finalized: No                                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────┐
│ 1:Search 2:Indexes 3:Cluster 4:Jobs 5:Health | q:Quit                                 │
└──────────────────────────────────────────────────────────────────────────────┘
